add font and remove previous font files and replace prelaunch title

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
 /* 👇 Put @use first */
 @use "./styles/partials/colors";   /* emits :root CSS variables */
 @use "./styles/partials/globals";  /* base/reset + mixins */
+@use "./styles/partials/fonts";
